force-app/main/default/objects/shc__State__c/shc__State__c.object-meta.xml
<CustomObject>
    <label>State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>