force-app/main/default/objects/shc__State__c/fields/shc__Alert_Delay__c.field-meta.xml
<CustomField>
    <fullName>shc__Alert_Delay__c</fullName>
    <defaultValue>5</defaultValue>
    <description>This is the number of minutes that the system will wait before sending out alert emails when a security event occurs.</description>
    <label>Alert Delay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>