force-app/main/default/objects/shc__State__c/fields/shc__Alert_Email__c.field-meta.xml
<CustomField>
    <fullName>shc__Alert_Email__c</fullName>
    <description>This is the email address that will receive the security alert emails (not the daily reports)</description>
    <label>Alert Email</label>
    <type>Email</type>
</CustomField>