force-app/main/default/objects/shc__State__c/fields/shc__Alert_Email_Sender__c.field-meta.xml
<CustomField>
    <fullName>shc__Alert_Email_Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will use the selected contact for the &apos;from&apos; field in the alert emails.</description>
    <label>Alert Email Sender</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact For Sender Field</relationshipLabel>
    <relationshipName>States</relationshipName>
    <type>Lookup</type>
</CustomField>