force-app/main/default/objects/shc__State__c/fields/shc__Date_Range_Days__c.field-meta.xml
<CustomField>
    <fullName>shc__Date_Range_Days__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of days for reported data</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>