force-app/main/default/objects/shc__State__c/fields/shc__email__c.field-meta.xml
<CustomField>
    <fullName>shc__email__c</fullName>
    <label>Whom should the report be send to</label>
    <type>Email</type>
</CustomField>