force-app/main/default/objects/shc__State__c/fields/shc__Last_Time_Report_Collected__c.field-meta.xml
<CustomField>
    <fullName>shc__Last_Time_Report_Collected__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Last time SHC ran date</description>
    <label>Last Time Report Collected</label>
    <type>DateTime</type>
</CustomField>