force-app/main/default/objects/shc__State__c/fields/shc__OrgWideEmail__c.field-meta.xml
<CustomField>
    <fullName>shc__OrgWideEmail__c</fullName>
    <description>The email address of the OrgWideEmail that the email should be sent as.</description>
    <inlineHelpText>Official help text!</inlineHelpText>
    <label>OrgWideEmail</label>
    <type>Email</type>
</CustomField>