force-app/main/default/objects/shc__State__c/fields/shc__Run_every_days__c.field-meta.xml
<CustomField>
    <fullName>shc__Run_every_days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>How often to run SHC</description>
    <label>Run every (days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>