force-app/main/default/objects/shc__State__c/fields/shc__Send_Alerts__c.field-meta.xml
<CustomField>
    <fullName>shc__Send_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Alerts</label>
    <type>Checkbox</type>
</CustomField>