force-app/main/default/objects/shc__State__c/fields/shc__Send_All_Reports__c.field-meta.xml
<CustomField>
    <fullName>shc__Send_All_Reports__c</fullName>
    <inlineHelpText>Choose to receive all previously not sent report or only the most recent one.</inlineHelpText>
    <label>What Type of Reports To Send</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Send All Recent Reports</fullName>
                <default>true</default>
                <label>Send All Recent Reports</label>
            </value>
            <value>
                <fullName>Send Last Report Only</fullName>
            </value>
            <value>
                <fullName>Send Report Only If Something Changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>