force-app/main/default/objects/shc__State__c/fields/shc__Send_Reports__c.field-meta.xml
<CustomField>
    <fullName>shc__Send_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is SHC supposed to send reports</description>
    <label>Send Reports</label>
    <type>Checkbox</type>
</CustomField>