force-app/main/default/objects/shc__State__c/validationRules/shc__AlertDelay_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>shc__AlertDelay_validation_rule</fullName>
    <active>true</active>
    <description>Alert delay cannot be negative</description>
    <errorConditionFormula>shc__Alert_Delay__c  &lt;=  0</errorConditionFormula>
    <errorDisplayField>shc__Alert_Delay__c</errorDisplayField>
    <errorMessage>Value should be positive</errorMessage>
</ValidationRule>