force-app/main/default/objects/shc__State__c/validationRules/shc__DaysOfData_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>shc__DaysOfData_validation_rule</fullName>
    <active>true</active>
    <description>Value should be positive</description>
    <errorConditionFormula>shc__Date_Range_Days__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>shc__Date_Range_Days__c</errorDisplayField>
    <errorMessage>Value should be positive</errorMessage>
</ValidationRule>