force-app/main/default/objects/shc__State__c/validationRules/shc__SendReport_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>shc__SendReport_validation_rule</fullName>
    <active>true</active>
    <description>Send Report days should be positive</description>
    <errorConditionFormula>shc__Run_every_days__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>shc__Run_every_days__c</errorDisplayField>
    <errorMessage>Value should be positive</errorMessage>
</ValidationRule>